--- a/src/main/resources/config/automation/environment.properties
+++ b/src/main/resources/config/automation/environment.properties
@@ -11,6 +11,9 @@ portal.agent.user.admin.name=Admin555
 portal.agent.user.agency.name=AGNC003
 portal.agent.user.branch.name=BRNCH003
 portal.agent.user.agent.name=AGNT009
+portal.agent.user.nonfundedagency.name=AGNC002
+portal.agent.user.nonfundedbranch.name=BRNCH002
+portal.agent.user.nonfundedagent.name=AGNT008
 portal.agent.user.password=8SJ28cqk5IcKiZyWDJCAnA==
 portal.agent.user.admin.password=oa6wt5mDUta2OGGW8olZKw==
 
@@ -29,7 +32,7 @@ linux.port.number=2222
 linux.user.name=dc-user
 linux.user.password=MyRd0h2j81kbrKqiWDXEtg==
 linux.folder.path=/home/dc-user/integrated/elt_bo/data/
-linux.application.upload.path
+linux.application.upload.path=
 linux.ipm_upload.path=IPM_INCOMING/INPUT/
 linux.WinSCPTool.Path=../WinSCPTool/WinSCP/WinSCP.exe
 
