--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -8,8 +8,8 @@ Customer.portal.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
 Agent.portal.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
 Customer.portal.user.admin.name=Admin
 Customer.portal.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
-Customer.portal.user.name=ravindra1
-Customer.portal.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+Customer.portal.user.name=Truptii
+Customer.portal.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 Agent.portal.user.admin.name=ADM005
 Agent.portal.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 Customer.portal.user.name2=Auto001
