--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -15,8 +15,8 @@ Agent.portal.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 Customer.portal.user.name2=Auto001
 
 portal.customer.url=https://stage.sa.eis.customer.mastercard.com/mpts/eis/app
-portal.customer.user.name=ravindra1
-portal.customer.user.password=8SJ28cqk5IcKiZyWDJCAnA==
+portal.customer.user.name=Truptii
+portal.customer.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 portal.customer.user.admin.name=TanmayW
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
