--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -21,15 +21,14 @@ portal.customer.user.admin.name=TanmayW
 portal.customer.user.admin.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 
 
-portal.agent.url=https://stage.sa.agent.mastercard.com/mpts/eis/app 
-portal.agent.user.name=ADM005
-portal.agent.user.admin.name=ADM005
-portal.agent.user.agency.name=AGNC006
-portal.agent.user.branch.name=BRNCH006
-portal.agent.user.agent.name=AGNT006
-portal.agent.user.nonfundedagency.name=AGNC008
-portal.agent.user.nonfundedbranch.name=BRNCH008
-portal.agent.user.nonfundedagent.name=AGNT0008
+portal.agent.url=https://stage.sa.agent.mastercard.com/mpts/eis/app
+portal.agent.user.admin.name=AgentADM
+portal.agent.user.agency.name=AGNC0001
+portal.agent.user.branch.name=BRNCH0001
+portal.agent.user.agent.name=AGN70007
+portal.agent.user.nonfundedagency.name=AGNC0002
+portal.agent.user.nonfundedbranch.name=BRNCH0002
+portal.agent.user.nonfundedagent.name=AGNT08
 portal.agent.user.password=+ZVbUWfQ3nJ7P5cP7YAGHQ==
 portal.agent.user.admin.password=8SJ28cqk5IcKiZyWDJCAnA==
 
