--- a/src/main/resources/config/stageSA/environment.properties
+++ b/src/main/resources/config/stageSA/environment.properties
@@ -87,24 +87,24 @@ simulator.vts.vts.ipaddress=172.27.139.166
 simulator.vts.host.ipaddress=10.158.14.89
 simulator.vts.host.port=9114
 
-simulator.finsim.port=6161
-simulator.finsim.ipaddress=10.254.0.36
-simulator.finsim.password=zZOmDlMyt1qfQnrj0oZtPw==
-simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
-simulator.finsim.decimalization.value=1234567890123456
-
-! -- Details For second FinSim Server
-#simulator.finsim.port=6262
-#simulator.finsim.ipaddress=10.254.2.36
-#simulator.finsim.password=zkk0xVdShEy48uuuhlabbw== 
+#simulator.finsim.port=6161
+#simulator.finsim.ipaddress=10.254.0.36
+#simulator.finsim.password=zZOmDlMyt1qfQnrj0oZtPw==
 #simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
 #simulator.finsim.decimalization.value=1234567890123456
 
-db.host=melstg1-scan
+! -- Details For second FinSim Server
+simulator.finsim.port=6262
+simulator.finsim.ipaddress=10.254.2.36
+simulator.finsim.password=zkk0xVdShEy48uuuhlabbw== 
+simulator.finsim.pinkey=5A554B8E2DB8D41EEE8DF9E1E18269DB
+simulator.finsim.decimalization.value=1234567890123456
+
+db.host=MPTS-SA-ISSUING-STAGE2
 db.port=1527
 db.username=MPTSE_ISS_USER
 db.password=KmslWW3d
-db.serviceName=Tesa1s
+db.serviceName=EIS_SA_ONLINE_SERV
 
 
 bdd.jdbc.tools.db.driverClassName=oracle.jdbc.driver.OracleDriver
