--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
                         <updatePolicy>never</updatePolicy>
                   </snapshots>
             </repository>
+            <repository>
+	            <id>PDFBox</id>
+	            <name>Override for maven super pom central</name>
+	            <url>http://central.maven.org/maven2/</url>
+          </repository>
       </repositories>
 
       <dependencies>
